--- a/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
+++ b/band_02/klamm_und_heimlich/klamm-und-heimlich.tex
@@ -317,7 +317,7 @@ Falls du den Handlungsfaden hier enden lassen willst, dann ist \textbf{Treudane}
 
 \neueseite
 
-\subsection{Anhang: Kampfwerte}
+\section{Anhang: Kampfwerte}
 
 \kreatur{Greifax}{\enquote{Mächtiger} Meckerdrache}{mythen}{
 	\label{greifax}
@@ -365,5 +365,5 @@ Falls du den Handlungsfaden hier enden lassen willst, dann ist \textbf{Treudane}
 }
 \spaltenende
 \begin{center}
-\includegraphics[width=0.33\linewidth]{oger}
+\includegraphics[width=0.31\linewidth]{oger}
 \end{center}
