--- a/band_02/main.tex
+++ b/band_02/main.tex
@@ -155,7 +155,7 @@
 	\href{https://de.wiki-aventurica.de/wiki/Ramona_von_Brasch}{Ramona von Brasch}\\
 	\href{https://www.zillie-zeh.de/}{Zillie Zeh}\\
 	\href{https://www.flickr.com/photos/britishlibrary/albums/with/72157640537276514}{British Library}\\
-	\href{https://www.nga.gov/}{National Gallary of Art}
+	\href{https://www.nga.gov/}{National Gallery of Art}
 }	
 \credit{\LaTeX-Klasse}{
 	\href{https://github.com/ilaris-tools/IlarisTex}{Lukas Ruhe}
