--- a/band_02/spielhilfen/spielhilfen.tex
+++ b/band_02/spielhilfen/spielhilfen.tex
@@ -1,31 +1,39 @@
 \credit{Autor}{Alrik Normalpaktierer}
 \spaltenanfang
-\subsection{Ilaris Online}
+\subsection*{Ilaris Online}
 Im \link{https://dsaforum.de/app.php/dlext/details?df_id=416}{ersten Band der Chroniken von Ilaris}
 hatten wir neben neuen Spielhilfen (wie der ersten Version der Manöverkarten, einigen Tipps zum Abenteuervorbereiten, \dots) auch einen Überblick über kostenfreie Spielhilfen zusammengestellt, die den Einstieg in Ilaris vereinfachen.
 Diese Übersicht ist immer noch hilfreich, aber vom Stand Früh\-som\-mer 2022.
-Da die Entwicklung vieler Projekte weitergelaufen ist, ist sie nicht mehr aktuell.
-Inzwischen bietet \link{https://ilaris-online.de/app/inhalte/}{Ilaris Online} eine vollständige Liste, filter- und sortierbar nach Kategorien.
-Auf dieser Website wird auch das gesamte Ilaris-Regelwerk als Datenbank angeboten.
+Da die Entwicklung vieler Projekte weiterlief, ist sie nicht mehr aktuell.
 
-Im Folgenden wollen wir einige ausgewählte Spielhilfen detaillierter vorstellen.
+Inzwischen bietet euch \link{https://ilaris-online.de/app/inhalte/}{Ilaris Online} eine vollständige Liste, filter- und sortierbar nach Kategorien.
+Auf Ilaris Online werden neben dem gesamten Ilaris-Regelwerk auch noch viele weitere nützliche Seiten und Tools angeboten.
+
+Im Folgenden werden wir einige ausgewählte Ilaris-Projekte detaillierter vorstellen.
 
 \subsection*{Kreaturendatenbank}
 Die \link{https://ilaris-tools.github.io/IlarisDB/db/kreaturen/}{Kreaturen\-datenbank} wurde von \textbf{Lukr} erheblich weiterentwickelt.
 Sie umfasst neben allen Kreaturen des Regelwerks inzwischen auch viele Gegner und NSCs, die andere Spielleitungen in ihrer Vorbereitung erstellt haben.
 Spielwerte stehen so als Konvertierungen für Abenteuer anderer Regeleditionen zur Verfügung.
 
+Außerdem lassen sich Kreaturen auch zu Abenteuern zuordnen, sodass mit einem Klick alle Kreaturen eines Abenteuers aufgelistet werden können. So haben wir die Links auf den einzelnen Abenteuertiteln hier im Band umgesetzt.
+
 Angemeldete Nutzende können selbst Kreaturen eintragen und sie für FoundryVTT oder als LaTeX- oder als Brauerei-Code (s.\,u.) im Format einer Manöverkarte exportieren.
 
 
-\zeichnung[\columnwidth]{Curthan2.jpg}
+\zeichnung[\columnwidth]{Curthan2_2.jpg}
+
+\columnbreak
+
+\subsection*{Layoutprogramm: Die Brauerei}
+Mit der \link{https://brauerei.ilaris-online.de/}{Brauerei} hat \textbf{Lukr} eine einfach zu bedienende, aber funktionsreiche online Layout-Hilfe erstellt, mit der Dokumente und Handouts im Ilaris-Layout hergestellt und verteilt werden können. Keine Werbung, keine Anmeldung nötig. Einfach kreativ werden. 
+
+Bewahre deine Links gut auf, diese brauchst du um deine Gebräue wiederzufinden und weiterzuarbeiten. Hier findest du eine \link{https://brauerei.ilaris-online.de/share/thZtbIr1lFHh}{Beispiel-Brauerei}.
+
+Lukas stellt die Brauerei in \link{https://www.youtube.com/watch?v=HLdT4mEAL2s&list=PLVioVhDcd4OS7wWlxEOxO3RoBzSRPh5KN&index=1}{diesem Video} vor. Vielleicht sagt euch auch die \link{https://youtu.be/Jj5S6jwzf1Y?t=2419}{SchelmSchau 137} zu, in welcher der Schelm die Ilaris Brauerei näher betrachtet.
 
 
-\subsection*{Layout: Die Brauerei}
-Mit der \link{https://brauerei.ilaris-online.de/}{Brauerei} hat \textbf{Lukr} eine einfach zu bedienende, aber funktionsreiche Layout-Hilfe erstellt, mit der online Dokumente und Handouts im Ilaris-Layout hergestellt und verteilt werden können.
-
-
-\subsection*{Generierungsprogramm Sephrasto}
+\subsection*{Charaktergenerator: Sephrasto}
 \link{https://github.com/Aeolitus/Sephrasto/releases}{Sephrasto} ist in den letzten Jahren
 -- vor allem von \textbf{Gatsu} --
 erneut deutlich weiterentwickelt worden und liegt inzwischen in der Version 5 vor.
